[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
docker-command = "5.0.0"
timeit = "0.1.2"
protocol = { path = "../protocol" }
serde_json = "1.0.114"
nix = { version = "0.28.0", features = ["user","fs"] }
serde_closure = "0.3.3"
typetag = "0.2.16"
serde = "1.0.197"

[profile.dev]
lto = true

[[bin]]
name = "executor"
path = "tests/executor.rs"