[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
nix = { version = "0.28.0", features = ["fs", "user"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
typetag = "0.2.16"
docker-command = "5.0.0"
protocol-proc = { path = "../protocol-proc" }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"

[lints]
workspace = true
