[package]
name = "subuidless-test-proc"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Srylax/probe-ipa"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copy_dir = "0.1.3"
docker-command = "5.0.0"
syn = "2.0.53"

[lib]
proc-macro = true

[lints]
workspace = true
